Two timers, beeping, pause button, reset button.

--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
 </head>
 <body onload="main();">
 <div id="main">
+  <div id="round"></div>
   <div id="wins">
     <div id="winsA" class="points A"></div>to
     <div id="winsB" class="points B"></div>
   </div>
   <div id="timers">
-    <div id="timer" class="points"></div>
-  </div>
-  <div id="scores">
-    <div id="scoreA" class="points A"></div><div id="scoreAplus" class="points A"></div>
-    <div id="scoreB" class="points B"></div><div id="scoreBplus" class="points B"></div>
+    <div id="timerA" class="points"></div>
+    <div id="timerB" class="points"></div>
   </div>
   <div id="phrasebox">
     <div id="phrase"></div><div id="refresh">Refresh</div>
   </div>
-  <div id="control">Go!</div>
+  <div id="control">Start!</div>
+  <div id="pause">||</div>
+  <div id="reset">Reset</div>
 </body>
 </html>
