added better pausing

--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
 	
 	</div>
 	
+	<div id="pause_overlay" style="display:none;">
+		<a href="#" id="resume">Resume</a>
+	</div>
+	
 </body>
 </html>
